<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#3A3A3A">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/picture_place_suggest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.6"
        />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/relativeLayoutHeaderSuggestion"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/relativeLayoutOpenClose">

            <ImageView
                android:layout_marginEnd="4dp"
                android:id="@+id/mapIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_map"
                android:contentDescription="@string/img_map" />

            <ImageView
                android:layout_marginStart="4dp"
                android:id="@+id/phoneIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"
                android:layout_alignTop="@+id/webIcon"
                android:layout_toEndOf="@+id/webIcon"
                android:contentDescription="@string/img_phone"/>

            <ImageView
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:id="@+id/webIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_web"
                android:layout_alignTop="@+id/mapIcon"
                android:layout_toEndOf="@+id/mapIcon"
                android:contentDescription="@string/img_web"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayoutOpenClose"
            android:background="@drawable/rounded_bg_green"
            android:alpha="0.7"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true">

            <ImageView
                android:contentDescription="@string/img_horaire"
                android:id="@+id/timeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_query_builder_24dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/openClose"
                android:textSize="12sp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:text="@string/label_open_close"
                android:layout_toEndOf="@+id/timeIcon"
                android:layout_centerVertical="true"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/relativeLayoutContentSuggestion"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/relativeLayoutHeaderSuggestion"
        android:layout_above="@+id/relativeLayoutBottomSuggestion">

        <me.grantland.widget.AutofitTextView
            android:maxLines="3"
            android:singleLine="false"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/placeName"
            android:text="@string/label_suggestion"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:gravity="bottom" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutBottomSuggestion"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true">

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="0.1"
            android:layout_centerVertical="true"
            style="@style/RatingBar" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayoutNavigation"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:layout_alignBottom="@+id/rating"
            android:layout_toEndOf="@+id/rating">

            <ImageView
                android:id="@+id/navIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_navigation_14dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/img_distance"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/distanceText"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:text="@string/label_distance"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/navIcon" />

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>