<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity.SuggestActivity">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:id="@+id/relativeLayoutPerso">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RLPersoTitle"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filters_perso"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                android:id="@+id/suggestPersoText"
                android:textColor="@color/grey"
                android:textStyle="normal"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_alignEnd="@+id/ButtonAddSuggestion" />


            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/ButtonAddSuggestion"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:onClick="onClick"
                fresco:backgroundImage="@drawable/ic_add"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp" />

        </RelativeLayout>



        <ListView
            android:id="@+id/SuggestUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/RLPersoTitle" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:id="@+id/relativeLayoutGoogle"
        android:layout_below="@+id/relativeLayoutPerso"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RLGoogleTitle"
            android:layout_alignParentEnd="true">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:id="@+id/SelectAllSuggests"
                android:onClick="onClick"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filters_Google"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                android:id="@+id/suggestGoogleText"
                android:textColor="@color/grey"
                android:textStyle="normal"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_toStartOf="@+id/SelectAllSuggests" />

        </RelativeLayout>


        <ListView
            android:id="@+id/SuggestGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/RLGoogleTitle" />


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayoutGoogle"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/saveFiltersButton"
            android:onClick="onClick"
            android:text="@string/Ok"/>
    </RelativeLayout>



</RelativeLayout>
